[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/img/UI/DIALOG_BOX.png" type="Texture" id=1]
[ext_resource path="res://assets/img/UI/DIALOG_BOX_NAME.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/dialog_text.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/fonts/dialog_namenpc.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/scene/UI/Dialog.gd" type="Script" id=5]
[ext_resource path="res://assets/fonts/NPCTrade.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/fonts/text16.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/fonts/logtext.tres" type="DynamicFont" id=8]

[node name="Dialog" type="Control" groups=[
"Dialog",
]]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -320.0
margin_top = -360.0
margin_right = 320.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PictureNPC" type="TextureRect" parent="."]
margin_left = 350.798
margin_top = 121.813
margin_right = 707.798
margin_bottom = 657.813
rect_scale = Vector2( 0.4, 0.4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameTexture" type="NinePatchRect" parent="."]
margin_left = 122.33
margin_top = 228.352
margin_right = 222.33
margin_bottom = 258.352
rect_min_size = Vector2( 100, 30 )
texture = ExtResource( 2 )

[node name="NameValue" type="Label" parent="NameTexture"]
margin_left = 16.1754
margin_top = 6.14038
margin_right = 89.1754
margin_bottom = 25.1404
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Name NPC"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogTexture" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -100.0
margin_right = 200.0
rect_min_size = Vector2( 400, 100 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogValue" type="Label" parent="DialogTexture"]
margin_left = 25.4563
margin_top = 16.0352
margin_right = 375.456
margin_bottom = 76.0352
rect_min_size = Vector2( 300, 60 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum"
autowrap = true
clip_text = true
max_lines_visible = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option" type="CenterContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -38.7245
margin_right = 20.0
margin_bottom = 1.27548
use_top_left = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="Option"]
margin_left = -125.0
margin_top = -75.0
margin_right = 125.0
margin_bottom = 75.0
rect_min_size = Vector2( 250, 150 )
texture = ExtResource( 2 )

[node name="ScrollContainer" type="ScrollContainer" parent="Option"]
margin_left = -105.0
margin_top = -60.0
margin_right = 105.0
margin_bottom = 60.0
rect_min_size = Vector2( 200, 120 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Option/ScrollContainer"]
margin_right = 210.0
margin_bottom = 120.0
rect_min_size = Vector2( 210, 120 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Option/ScrollContainer/CenterContainer"]
margin_top = 5.0
margin_right = 210.0
margin_bottom = 115.0
rect_min_size = Vector2( 210, 110 )
custom_constants/separation = 10
alignment = 1

[node name="Button" type="Button" parent="Option/ScrollContainer/CenterContainer/VBoxContainer"]
visible = false
margin_top = 46.0
margin_right = 210.0
margin_bottom = 63.0
custom_fonts/font = ExtResource( 8 )
text = "Talk"

[node name="Icon" type="Label" parent="."]
margin_left = 157.197
margin_top = 335.565
margin_right = 390.197
margin_bottom = 350.565
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Press Enter for Close or Continue Dialog"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon2" type="Label" parent="."]
margin_left = 480.25
margin_top = 353.397
margin_right = 492.25
margin_bottom = 375.397
rect_scale = Vector2( -1, -1 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "^"
__meta__ = {
"_edit_use_anchors_": false
}
